--- a/style.css
+++ b/style.css
@@ -34,10 +34,11 @@ body > * {
   align-items: flex-end;
 
   min-height: 75px;
-  padding: 5px;
+  padding: 5px 10px;
 
   box-sizing: border-box;
   background-color: #cadbc5;
+  font-size: 28px;
   border-radius: 15px;
 }
 .display-container {
