Feat: chaining operations
add second row to display

--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ body > * {
 }
 .calculator-display {
   display: flex;
+  flex-direction: column;
   justify-content: flex-end;
   align-items: flex-end;
 
